<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SettingsFragment"
    android:padding="@dimen/item_spacing">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/is_public_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/item_spacing">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:text="@string/make_account_public"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/is_public_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/gender_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/item_spacing"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/is_public_layout"
            android:elevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="@dimen/item_spacing">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/gender_edit_text_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/choose_your_gender"
                    android:autofillHints="@string/choose_your_gender"
                    app:boxBackgroundColor="@color/colorWhite"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/gender_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/age_range_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gender_layout"
            android:layout_marginTop="@dimen/item_spacing"
            android:elevation="2dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/item_spacing">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_age_range"
                    android:layout_gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:layout_marginBottom="@dimen/item_spacing"/>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/minimum_age_edit_text_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/minimum_age"
                        android:autofillHints="@string/minimum_age"
                        app:boxBackgroundColor="@color/colorWhite"
                        android:layout_weight="1"
                        android:layout_marginEnd="@dimen/item_spacing"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/minimum_age_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="number"/>

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/maximum_age_edit_text_layout"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/maximum_age"
                        android:autofillHints="@string/maximum_age"
                        app:boxBackgroundColor="@color/colorWhite"
                        android:layout_weight="1"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/maximum_age_edit_text"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:inputType="number" />

                    </com.google.android.material.textfield.TextInputLayout>


                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/maximum_search_distance_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/age_range_layout"
            android:layout_marginTop="@dimen/item_spacing"
            android:elevation="2dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/item_spacing">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/max_distance"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <com.google.android.material.slider.Slider
                    android:id="@+id/maximum_search_distance_slider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:valueFrom="1"
                    android:valueTo="100"
                    android:stepSize="1" />

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/daily_matches_reminder_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/maximum_search_distance_layout"
            android:layout_marginTop="@dimen/item_spacing"
            android:elevation="2dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/item_spacing">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Daily matches reminder"
                    android:textAlignment="center"
                    android:layout_marginBottom="@dimen/item_spacing"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

                <Button
                    android:id="@+id/daily_matches_reminder_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Choose Reminder Time"
                    android:padding="@dimen/small_item_spacing"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/save_settings_layout"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/daily_matches_reminder_layout"
            android:layout_marginTop="@dimen/item_spacing"
            android:elevation="2dp">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/item_spacing">

                <Button
                    android:id="@+id/save_settings_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/save_changes"
                    android:padding="@dimen/small_item_spacing"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>