...
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ipsum_lorum"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

            <CheckBox
                android:id="@+id/match_like_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="@dimen/item_spacing"
                android:layout_marginTop="@dimen/item_spacing"
                android:button="@drawable/sl_favourite_24dp"
...
